--- a/src/DepotVente/BourseBundle/Resources/config/routing.yml
+++ b/src/DepotVente/BourseBundle/Resources/config/routing.yml
@@ -4,7 +4,7 @@ bourse_homepage:
 
 bourse_depotpage:
     pattern:  /depot
-    defaults: { _controller: BourseBundle:Depot:index }
+    defaults: { _controller: BourseBundle:Article:index }
 
 bourse_boursepage:
     pattern: /bourse
