Fonction nouvelle bourse + modification de vues diverses

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,7 +60,7 @@ swiftmailer:
     spool:     { type: memory }
 
 # FOSUserBundle Configuration
-fos_user:
-    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
-    firewall_name: main
-    user_class: DepotVente\BourseBundle\Entity\User
+# fos_user:
+#     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+#     firewall_name: main
+#     user_class: DepotVente\BourseBundle\Entity\User
